# faker_pandas

./: Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
faker_pandas/: __init__.py  provider.py
tests/: provider.py  test_provider.py
