[tool.poetry]
name = "faker-pandas"
version = "0.1.0"
description = "Adds Provider for Faker library to Generate randomized Pandas DataFrames"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^13.6.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
