[tool.poetry]
name = "faker-pandas"
version = "0.1.2"
description = "Adds Provider for Faker library to Generate randomized Pandas DataFrames"
authors = ["Sani <sani@sani.love>"]
readme = "README.md"
repository = "https://github.com/nitori/faker_pandas"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^13.6.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/nitori/faker_pandas/issues"
